--- a/.github/workflows/infra-deployment-workflow.yml
+++ b/.github/workflows/infra-deployment-workflow.yml
@@ -28,6 +28,7 @@ jobs:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        enable-AzPSSession: true
         #creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       # Deploy Bicep file
